[metadata]
name = ncsw
version = 2024.06.1
author = Haris Hasic
description = The NeoChemSynthWave package.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    chemical-compounds,
    chemical-reactions,
    chemical-synthesis,
    chemoinformatics,
    retrosynthesis,
    retrosynthetic-analysis

[options]
packages = find:

[options.packages.find]
include =
    ncsw_data
exclude =
    references
