[metadata]
name = ncsw
author = Haris Hasic
description = The NeoChemSynthWave project.
long_description = file: README.md
long_description_content_type = text/markdown
license_files = file: LICENSE
keywords =
    chemoinformatics

[options]
packages = find:

[options.packages.find]
include =
    ncsw
